# graphql-sqlalchemy-example

./: .gitignore  LICENSE  README.md  pyproject.toml
src/graphql_sqlalchemy_example/: models.py  run.py
