[tool.poetry]
name = "graphql-sqlalchemy-example"
version = "0.1.0"
description = ""
authors = ["Guido <hi@guido.nyc>"]

[tool.poetry.dependencies]
python = "^3.7.0"
graphql-sqlalchemy = {path = "../graphql-sqlalchemy"}
fastapi = "^0.63.0"
ariadne = "^0.13.0"
uvicorn = "^0.13.4"
sqlalchemy = ">=1.3,<1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
